[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Actors/MeleeEnemyAttack.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WindProjectile.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Textures/windtornado.png" type="Texture" id=3]
[ext_resource path="res://src/Effects/Textures/small_smoke.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.00909091, 0.590909, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.47451, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.26
emission_shape = 2
emission_box_extents = Vector3( 256, 1, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -250.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 500.0
damping_random = 0.13
scale = 0.25
scale_random = 0.5
color_ramp = SubResource( 15 )
anim_speed = 2.0
anim_speed_random = 0.1
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.590909, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.26
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 250.0
color_ramp = SubResource( 16 )
anim_speed = 4.0
anim_speed_random = 0.1
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.79
emission_shape = 2
emission_box_extents = Vector3( 256, 8, 1 )
flag_disable_z = true
spread = 0.0
initial_velocity = -250.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 300.0
damping_random = 1.0
color = Color( 0.976471, 0.666667, 1, 1 )
anim_speed = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 254.5, 19 )

[node name="WindProjectile" type="Node2D"]
z_index = 15
script = ExtResource( 2 )

[node name="particles2D" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( -231, 3 )
emitting = false
amount = 65
lifetime = 0.4
one_shot = true
explosiveness = 0.95
visibility_rect = Rect2( -5000, -50, 10000, 111 )
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="particles2D2" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( -13, 3 )
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
visibility_rect = Rect2( -5000, -50, 10000, 111 )
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="particles2D3" type="Particles2D" parent="."]
material = SubResource( 8 )
position = Vector2( -247, 0 )
z_index = -1
emitting = false
amount = 100
lifetime = 0.4
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -5000, -50, 10000, 111 )
process_material = SubResource( 9 )
texture = ExtResource( 4 )

[node name="damage_on_touch" type="Node2D" parent="."]
script = ExtResource( 1 )
active = false
active_duration = 0.1
owner_character = NodePath("..")
damage_in_combo = 1.0

[node name="area2D" type="Area2D" parent="damage_on_touch"]
position = Vector2( -452, 0 )

[node name="collisionShape2D" type="CollisionShape2D" parent="damage_on_touch/area2D"]
position = Vector2( 196.5, 0 )
shape = SubResource( 1 )
